--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>The Jefferson - Music Venue</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div>
-        <h2>Welcome to The Jefferson</h2>
+      <h2>Welcome to The Jefferson</h2>
     </div>
+    <div class="shows">
+      <h3>Shows:</h3>
+    </div>
+    <ul id="list-of-shows"></ul>
 
     <script src="shows.js"></script>
     <script src="javascript.js"></script>
-</body>
-
+  </body>
 </html>
